package EconomyModule;

public enum EconomyResponses {
    INSUFFICIENT_FUNDS,
    SUCCESS
}
