@startuml

title __ECONOMYMODULE's Class Diagram__\n

  namespace EconomyModule {
    class EconomyModule.EconomyController {
        + EconomyController()
        + activityReward()
        + addToUser()
        + getWalletTotalForUser()
        + subtractFromUser()
        + transferToUser()
    }
  }
  

  namespace EconomyModule {
    class EconomyModule.EconomyDBConnector {
        ~ conn : Connection
        + EconomyDBConnector()
        + addToTotal()
        + createUser()
        + getRowTotal()
        + subtractFromTotal()
        + transferToUser()
        + userExists()
        - connect()
        - createTable()
    }
  }
  

  namespace EconomyModule {
    enum EconomyResponses {
      INSUFFICIENT_FUNDS
      SUCCESS
    }
  }
  

  namespace EconomyModule {
    class EconomyModule.TransferCommand {
        + TransferCommand()
        + execute()
    }
  }
  

  namespace EconomyModule {
    class EconomyModule.WalletCommand {
        + WalletCommand()
        + execute()
    }
  }
  

  EconomyModule.EconomyController -up-|> Commands.Command
  EconomyModule.EconomyController o-- EconomyModule.EconomyDBConnector : dbConnector
  EconomyModule.TransferCommand -up-|> Commands.Command
  EconomyModule.TransferCommand o-- EconomyModule.EconomyController : economyController
  EconomyModule.WalletCommand -up-|> Commands.Command
  EconomyModule.WalletCommand o-- EconomyModule.EconomyController : controller


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
